# ChangeLog for net-voip/telepathy-connection-managers
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-connection-managers/ChangeLog,v 1.3 2010/01/05 04:37:33 josejx Exp $

  05 Jan 2010; Joseph Jezak <josejx@gentoo.org>
  telepathy-connection-managers-1.ebuild:
  Marked ~ppc for bug #245949.

  27 Sep 2009; Olivier Crête <tester@gentoo.org>
  telepathy-connection-managers-1.ebuild:
  Add IRC, put minimum versions for MC 5.2 and spec 0.18.0

*telepathy-connection-managers-1 (27 Sep 2009)

  27 Sep 2009; Olivier Crête <tester@gentoo.org>
  +telepathy-connection-managers-1.ebuild, +metadata.xml:
  Add metapackage for the connection managers, bug #206073
