@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-connection-managers/telepathy-connection-managers-1.ebuild,v 1.3 2010/01/05 04:37:33 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-connection-managers/telepathy-connection-managers-1.ebuild,v 1.4 2010/02/19 19:29:58 armin76 Exp $
 
 DESCRIPTION="Meta-package for Telepathy Connection Managers"
 
@@ -9,7 +9,7 @@ SRC_URI=""
 LICENSE="as-is"
 SLOT="0"
 
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ~ia64 ~ppc ~sparc ~x86"
 
 IUSE="msn irc yahoo icq jabber sip bonjour"
 
