@@ -1,6 +1,10 @@
 # ChangeLog for net-voip/telepathy-sofiasip
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-sofiasip/ChangeLog,v 1.7 2010/01/05 04:37:15 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-sofiasip/ChangeLog,v 1.8 2010/02/19 19:25:26 armin76 Exp $
+
+  19 Feb 2010; Raúl Porcel <armin76@gentoo.org>
+  telepathy-sofiasip-0.5.17.ebuild, telepathy-sofiasip-0.5.18.ebuild:
+  Add ~ia64/~sparc
 
   05 Jan 2010; Joseph Jezak <josejx@gentoo.org>
   telepathy-sofiasip-0.5.17.ebuild, telepathy-sofiasip-0.5.18.ebuild:
